# template-role-ansible

./: .ansible-lint  .codeac.yml  .yamllint  CHANGELOG.md  README.md  playbook.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
tasks/: main.yml
tests/: test.yml
vars/: main.yml
