[tool.poetry]
name = "template-role-ansible"
version = "1.0.0"
description = ""
authors = ["Mentoria IaC"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.7.1"
ansible-lint = "^6.0.2"
molecule = "<3.6"
molecule-docker = "^1.1.0"
pytest = "^7.1.2"
pytest-testinfra = "^6.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
